name:                  scarlet
version:               0.1.0.0
synopsis:              A lightweight blogging engine built on Yesod.
homepage:              https://github.com/rhwlo/scarlet
license-file:          LICENSE
author:                Joshua Coats
maintainer:            github@rhwlo.com
category:              Web
build-type:            Simple
cabal-version:         >=1.10


executable scarlet
  main-is:             Scarlet.hs
  other-extensions:    EmptyDataDecls,
                       FlexibleContexts,
                       GADTs,
                       GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       OverloadedStrings,
                       QuasiQuotes,
                       TemplateHaskell,
                       TypeFamilies
  build-depends:       base >=4.8 && <4.9,
                       containers,
                       Cabal >=1.22 && <1.23,
                       parsec,
                       persistent,
                       persistent-sqlite,
                       persistent-template,
                       resourcet,
                       monad-logger,
                       time >=1.5 && <1.6,
                       text,
                       transformers,
                       yesod
  hs-source-dirs:      src
  default-language:    Haskell2010

executable scarlet-post
  main-is:             Scarlet/Post.hs
  other-extensions:    EmptyDataDecls,
                       FlexibleContexts,
                       GADTs,
                       GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       OverloadedStrings,
                       QuasiQuotes,
                       TemplateHaskell,
                       TypeFamilies
  build-depends:       base >=4.8 && <4.9,
                       containers,
                       Cabal >=1.22 && <1.23,
                       monad-logger,
                       parsec,
                       persistent,
                       persistent-sqlite,
                       persistent-template,
                       time >=1.5 && <1.6,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
