name:                 scarlet
version:              0.1.0.0
synopsis:             A lightweight blogging engine built on Yesod.
homepage:             https://github.com/rhwlo/scarlet
license-file:         LICENSE
author:               Joshua Coats
maintainer:           github@rhwlo.com
category:             Web
build-type:           Simple
cabal-version:        >=1.22


library
  exposed-modules:    Scarlet.Post.Internal,
                      Scarlet.Entry
  hs-source-dirs:     src
  other-extensions:   FlexibleContexts,
                      OverloadedStrings
  build-depends:      base >= 4.8.0.0,
                      containers >= 0.5.6.2,
                      Cabal >= 1.22.4.0,
                      monad-logger >= 0.3.13.2,
                      HTTP >= 4000.2.20,
                      network-uri >= 2.6.0.3,
                      pandoc >= 1.15.0.6,
                      parsec >= 3.1.9,
                      persistent >= 2.2,
                      persistent-sqlite >= 2.2,
                      persistent-template >= 2.1.3.6,
                      time >= 1.5.0.1,
                      transformers >= 0.4.2.0
  default-language:   Haskell2010

test-suite scarlet-test
  test-module:        PostTest
  type:               detailed-0.9
  build-depends:      scarlet,
                      base >= 4.8.0.0,
                      cabal-test-hunit >= 0.2,
                      Cabal >= 1.22.4.0,
                      HUnit >= 1.3.0.0,
                      HTTP >= 4000.2.20,
                      network-uri >= 2.6.0.3,
                      pandoc >= 1.15.0.6,
                      parsec >= 3.1.9
  hs-source-dirs:     test
  default-language:   Haskell2010

executable scarlet
  main-is:            Scarlet.hs
  other-extensions:   EmptyDataDecls,
                      FlexibleContexts,
                      GADTs,
                      GeneralizedNewtypeDeriving,
                      MultiParamTypeClasses,
                      OverloadedStrings,
                      QuasiQuotes,
                      TemplateHaskell,
                      TypeFamilies
  build-depends:      base >= 4.8.0.0,
                      containers >= 0.5.6.2,
                      Cabal >= 1.22.4.0,
                      exceptions >= 0.8.0.2,
                      pandoc >= 1.15.0.6,
                      persistent >= 2.2,
                      persistent-sqlite >= 2.2,
                      persistent-template >= 2.1.3.6,
                      resourcet >= 1.1.6,
                      monad-logger >= 0.3.13.2,
                      time >= 1.5.0.1,
                      text >= 1.2.1.3,
                      transformers >= 0.4.2.0,
                      yesod >= 1.4.2,
                      yesod-static >= 1.5.0.3
  hs-source-dirs:     src
  default-language:   Haskell2010

executable scarlet-post
  main-is:            src/Scarlet/Post.hs
  other-extensions:   EmptyDataDecls,
                      FlexibleContexts,
                      GADTs,
                      GeneralizedNewtypeDeriving,
                      MultiParamTypeClasses,
                      OverloadedStrings,
                      QuasiQuotes,
                      TemplateHaskell,
                      TypeFamilies
  build-depends:      base >= 4.8.0.0,
                      containers >= 0.5.6.2,
                      Cabal >= 1.22.4.0,
                      monad-logger >= 0.3.13.2,
                      parsec >= 3.1.9,
                      persistent >= 2.2,
                      persistent-sqlite >= 2.2,
                      persistent-template >= 2.1.3.6,
                      scarlet,
                      time >= 1.5.0.1,
                      transformers >= 0.4.2.0
  default-language:   Haskell2010
